Resolve menu on mobile devices
Fixes #52

--- a/assets/css/fyne-apps.webflow.css
+++ b/assets/css/fyne-apps.webflow.css
@@ -1289,8 +1289,7 @@
   }
 
   .dropdown-list-2 {
-    position: fixed;
-    right: 0px;
+    right: 0;
     display: none;
   }
 
